--- a/Frontends/CarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using CarBook.WebUI
 @using CarBook.WebUI.Models
+@using CarBook.DTO.AboutDtos
+@using CarBook.DTO.TestimonialDtos
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
