--- a/Frontends/CarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook.WebUI/Views/_ViewImports.cshtml
@@ -2,5 +2,10 @@
 @using CarBook.WebUI.Models
 @using CarBook.DTO.AboutDtos
 @using CarBook.DTO.TestimonialDtos
+@using CarBook.DTO.ServiceDtos
+@using CarBook.DTO.CarDtos
+@using CarBook.DTO.FooterAdressDtos
+@using CarBook.DTO.ContactDtos
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
