--- a/Frontends/CarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook.WebUI/Views/_ViewImports.cshtml
@@ -6,6 +6,7 @@
 @using CarBook.DTO.CarDtos
 @using CarBook.DTO.FooterAdressDtos
 @using CarBook.DTO.ContactDtos
+@using CarBook.DTO.BannerDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
