--- a/Frontends/CarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook.WebUI/Views/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using CarBook.DTO.FooterAdressDtos
 @using CarBook.DTO.ContactDtos
 @using CarBook.DTO.BannerDtos
+@using CarBook.DTO.BlogDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
