Add About page enhancements and new statistics component
- Update AboutController to include additional ViewBag data
- Create new DefaultStatisticsComponentPartial for displaying statistics
- Update Index view to include the new statistics component
- Modify links in various components to point to the correct routes

--- a/Frontends/CarBook.WebUI/Views/Shared/Components/_BecomeADriverComponentPartial/Default.cshtml
+++ b/Frontends/CarBook.WebUI/Views/Shared/Components/_BecomeADriverComponentPartial/Default.cshtml
@@ -4,7 +4,7 @@
 		<div class="row justify-content-end">
 			<div class="col-md-6 heading-section heading-section-white ftco-animate">
 				<h2 class="mb-3">Rahat bir sürüş mü istiyorsunuz?</h2>
-				<a href="#" class="btn btn-primary btn-lg">Bir araç kiralayın.</a>
+				<a href="/RentACar/Index/" class="btn btn-primary btn-lg">Bir araç kiralayın.</a>
 			</div>
 		</div>
 	</div>
