--- a/Frontends/CarBook.WebUI/Views/Default/Index.cshtml
+++ b/Frontends/CarBook.WebUI/Views/Default/Index.cshtml
@@ -10,10 +10,7 @@
 
     @await Component.InvokeAsync("_NavbarUILayoutComponentPartial")
 
-
     @await Component.InvokeAsync("_DefaultCoverUILayoutComponentPartial")
-
-    
 
     <section class="ftco-section ftco-no-pt bg-light">
         <div class="container">
@@ -87,67 +84,21 @@
             </div>
     </section>
 
-    
     @await Component.InvokeAsync("_DefaultLastFiveCarsWithBrandsComponentPartial")
-
-
 
     @await Component.InvokeAsync("_AboutUsComponentPartial")
 
     @await Component.InvokeAsync("_ServiceComponentPartial")
     
-
     @await Component.InvokeAsync("_BecomeADriverComponentPartial")
 
-    
     @await Component.InvokeAsync("_TestimonialComponentPartial")
     
     @await Component.InvokeAsync("_GetLastThreeBlogsWithAuthorListComponentPartial")
 
-    
-
-    <section class="ftco-counter ftco-section img bg-light" id="section-counter">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
-                    <div class="block-18">
-                        <div class="text text-border d-flex align-items-center">
-                            <strong class="number" data-number="60">0</strong>
-                            <span>Year <br>Experienced</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
-                    <div class="block-18">
-                        <div class="text text-border d-flex align-items-center">
-                            <strong class="number" data-number="1090">0</strong>
-                            <span>Total <br>Cars</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
-                    <div class="block-18">
-                        <div class="text text-border d-flex align-items-center">
-                            <strong class="number" data-number="2590">0</strong>
-                            <span>Happy <br>Customers</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate">
-                    <div class="block-18">
-                        <div class="text d-flex align-items-center">
-                            <strong class="number" data-number="67">0</strong>
-                            <span>Total <br>Branches</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    @await Component.InvokeAsync("_DefaultStatisticsComponentPartial")
 
     @await Component.InvokeAsync("_FooterUILayoutComponentPartial")
-
 
     @await Component.InvokeAsync("_ScriptsUILayoutComponentPartial")
 
