--- a/Frontends/CarBook.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/CarBook.WebUI/Views/_ViewImports.cshtml
@@ -8,6 +8,7 @@
 @using CarBook.DTO.ContactDtos
 @using CarBook.DTO.BannerDtos
 @using CarBook.DTO.BlogDtos
+@using CarBook.DTO.CarPricingDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
